--- a/TaskFlow/TaskFlow.Api/appsettings.json
+++ b/TaskFlow/TaskFlow.Api/appsettings.json
@@ -1,5 +1,12 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=taskflow.db"
-    }
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
