--- a/TaskFlow/TaskFlow.Infrastructure/TaskFlow.Infrastructure.csproj
+++ b/TaskFlow/TaskFlow.Infrastructure/TaskFlow.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskFlow.Core\TaskFlow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
